Programming conditionals, much improvement

--- a/demo/views/content.htm
+++ b/demo/views/content.htm
@@ -3,8 +3,10 @@
 @section("content")
     <h1>Content</h1>
 
-    @if(items[0].id == 1)
+    @if(items[0].id == 2)
     <h1>Is True</h1>
+    @else
+    <h1>This is false!</h1>
     @endif
 
     @unless(false)
