--- a/demo/views/content.htm
+++ b/demo/views/content.htm
@@ -3,6 +3,10 @@
 @section("content")
     <h1>Content</h1>
 
+    @foreach(item in items)
+        <li>${item.name}</li>
+    @endforeach
+
     @if(items[0].id == 1)
     <h1>Is True</h1>
     @else
