--- a/demo/views/layouts/master.htm
+++ b/demo/views/layouts/master.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>${title} ${name.get()}</title>
+    <title>${data.title} ${data.name.get()}</title>
 </head>
 <body>
     <main>
