Add new filters, class filter, add scope property to template, unless tag

--- a/demo/views/index.htm
+++ b/demo/views/index.htm
@@ -4,7 +4,7 @@
 
 @include(partials/object)
 
-<h1>${"Grenade Demo"}</h1>
+<h1 class="${?{name:true, noname:false}}">Grenade Demo</h1>
 
     @if(false)
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ea est et facere ipsam quo repellendus, sapiente. Consequuntur, eligendi, iste?</p>
