--- a/demo/views/index.htm
+++ b/demo/views/index.htm
@@ -6,9 +6,10 @@
 ${#Comment#}
 
 <div class="@show(positive:true, negative:false)"></div>
-
+${data.date | fromNow}
 @push(stack)
-@date(MMM Do YY)
+@date([data.date,"MMM Do YY"])
+
 <p>STACK1</p>
 @endpush
 
