Add set tag, fix for component

--- a/demo/views/simple.htm
+++ b/demo/views/simple.htm
@@ -4,6 +4,8 @@
 
     <h1 class="${?name:true, noname:false}">Grenade Demo</h1>
 
+    @set(title = "Neato")
+
     @if(true)
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ea est et facere ipsam quo repellendus, sapiente. Consequuntur, eligendi, iste?</p>
     @endif
