Add literal mode for variables, update readme

--- a/demo/views/simple.htm
+++ b/demo/views/simple.htm
@@ -2,6 +2,8 @@
 
 @section(body)
 
+    ${:data.title}
+
     <h1 class="${?name:true, noname:false}">Grenade Demo</h1>
 
     @block(FormComponent, {method:"post"})
